--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,11 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand">duious</a>
+    <a class="navbar-brand ">
+        <span style="vertical-align: inherit;color:#fff">
+            <span style="vertical-align: inherit;">duious</span>
+        </span>
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
