--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand " href="http://www.duious.com/">
+    <a class="navbar-brand " href="http://www.duious.com/" title="前往duious个人主页">
         <span style="vertical-align: inherit;color:#fff">
             <span style="vertical-align: inherit;">duious</span>
         </span>
