--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,7 +66,7 @@
         </div>
     </div>
 </footer>
-<script src="/js/jquery.min.js"></script>
-<script src="/js/bootstrap.min.js"></script>
+<!--<script src="/js/jquery.min.js"></script>-->
+<!--<script src="/js/bootstrap.min.js"></script>-->
 </body>
 </html>
