--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html lang="zh-CN">
 <head>
     <title>{{ page.title }}</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link type="text/css" href="/css/bootstrap.min.css">
+    <link type="text/css" href="/css/main.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -26,47 +25,23 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/blog">Blog <span class="sr-only">(current)</span></a>
             </li>
-            <!--<li class="nav-item">-->
-            <!--<a class="nav-link" href="#">Link</a>-->
-            <!--</li>-->
-            <!--<li class="nav-item dropdown">-->
-            <!--<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"-->
-            <!--aria-haspopup="true" aria-expanded="false">-->
-            <!--Dropdown-->
-            <!--</a>-->
-            <!--<div class="dropdown-menu" aria-labelledby="navbarDropdown">-->
-            <!--<a class="dropdown-item" href="#">Action</a>-->
-            <!--<a class="dropdown-item" href="#">Another action</a>-->
-            <!--<div class="dropdown-divider"></div>-->
-            <!--<a class="dropdown-item" href="#">Something else here</a>-->
-            <!--</div>-->
-            <!--</li>-->
-            <!--<li class="nav-item">-->
-            <!--<a class="nav-link disabled" href="#">Disabled</a>-->
-            <!--</li>-->
         </ul>
-        <!--<form class="form-inline my-2 my-lg-0">-->
-        <!--<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">-->
-        <!--<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
-        <!--</form>-->
     </div>
 </nav>
 <div class="container">
     {{content}}
 </div>
-<footer class="footer ">
+<footer class="footer">
     <div class="container">
         <hr>
         <div class="text-center">
             <ul class="list-inline">
-                <li>Email: <a href="mailto: 33707158+duious@users.noreply.github.com"
-                >33707158+duious@users.noreply.github.com</a></li>
                 <li>GitHub:<a href="https://github.com/duious" target="_blank">github.com/duious</a></li>
             </ul>
         </div>
     </div>
 </footer>
-<!--<script src="/js/jquery.min.js"></script>-->
-<!--<script src="/js/bootstrap.min.js"></script>-->
 </body>
+<script type="application/javascript" src="/js/jquery.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
 </html>
