--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,10 @@ a, a:hover, a:visited {
     color: #333;
 }
 
+footer {
+    position: absolute;
+}
+
 .selector-for-some-widget {
     box-sizing: content-box;
 }
