--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,5 +43,5 @@
 </footer>
 </body>
 <script type="application/javascript" src="/js/jquery.min.js"></script>
-<script src="/js/bootstrap.min.js"></script>
+<script type="application/javascript" src="/js/bootstrap.min.js"></script>
 </html>
