--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,8 @@
 <head>
     <title>{{ page.title }}</title>
     <meta charset="UTF-8">
-    <link type="text/css" href="/css/bootstrap.min.css">
-    <link type="text/css" href="/css/main.css">
+    <style type="text/css" href="/css/bootstrap.min.css"></style>
+    <style type="text/css" href="/css/main.css"></style>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
