--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,9 +2,9 @@
 <html lang="zh-CN">
 <head>
     <title>{{ page.title }}</title>
-    <meta charset="UTF-8" >
-    <style type="text/css" href="/css/bootstrap.min.css"></style>
-    <style type="text/css" href="/css/main.css"></style>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../css/main.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -42,6 +42,6 @@
     </div>
 </footer>
 </body>
-<script type="application/javascript" src="/js/jquery.min.js"></script>
-<script type="application/javascript" src="/js/bootstrap.min.js"></script>
+<!--<script type="application/javascript" src="/js/jquery.min.js"></script>-->
+<!--<script type="application/javascript" src="/js/bootstrap.min.js"></script>-->
 </html>
