--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,6 @@
     </div>
 </footer>
 </body>
-<script type="application/javascript" src="/js/jquery.min.js"></script>
-<script type="application/javascript" src="/js/bootstrap.min.js"></script>
+<script type="application/javascript" src="../js/jquery.min.js"></script>
+<script type="application/javascript" src="../js/bootstrap.min.js"></script>
 </html>
