--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand " href="http://www.duious.com/" title="前往duious个人主页">
+    <a class="navbar-brand " href="https://duious.github.io/" title="前往duious个人主页">
         <span style="vertical-align: inherit;color:#fff">
             <span style="vertical-align: inherit;">&nbsp;&nbsp;duious&nbsp;&nbsp;</span>
         </span>
