--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,8 @@
 <head>
     <title>{{ page.title }}</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="../css/main.css">
+    <link rel="stylesheet" type="text/css" href="https://duious.github.io/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://duious.github.io/css/main.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -41,6 +41,6 @@
     </div>
 </footer>
 </body>
-<script type="application/javascript" src="../js/jquery.min.js"></script>
-<script type="application/javascript" src="../js/bootstrap.min.js"></script>
+<script type="application/javascript" href="https://duious.github.io/js/jquery.min.js"></script>
+<script type="application/javascript" href="https://duious.github.io/js/bootstrap.min.js"></script>
 </html>
