--- a/css/main.css
+++ b/css/main.css
@@ -13,9 +13,8 @@ a, a:hover, a:visited {
 
 footer {
     border-top: 1px solid #aaa;
-    min-height: 960px;
+    margin-top: 960px;
     position: relative;
-    bottom: 0;
     width: 100%;
 }
 
