--- a/css/main.css
+++ b/css/main.css
@@ -26,4 +26,10 @@ footer {
 
 .post {
     background-color: #fff;
+    padding: 40px 0 0 15px;
+    border: 0 solid #333;
+    border-left: 35px solid #ccc;
+    font-family: Consolas, Inconsolata, Courier, monospace;
+    font-size: 14px;
+    font-weight: 400;
 }
