--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ footer {
 
 .post {
     width: 800px;
-    background-color: #fff;
+    background-color: #eef0f4;
     padding: 40px 0 0 15px;
     border: 0 solid #333;
     border-left: 35px solid #ccc;
