--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,16 +28,24 @@
         </ul>
     </div>
 </nav>
-<div class="container">
+<div class="container" style="min-height: 960px">
     {{content}}
 </div>
-<footer class="footer">
+<footer class="footer jumbotron">
     <div class="container">
-        <div class="text-center">
-            <ul class="list-inline">
-                <li>GitHub:<a href="https://github.com/duious" target="_blank">github.com/duious</a></li>
-            </ul>
+        <div class="list-group">
+            <a class="h5">常用工具网站：</a>
+            <a href="#" class=" ">Cras justo odio</a>
+            <a href="#" class=" ">Dapibus ac facilisis in</a>
+            <a href="#" class=" ">Morbi leo risus</a>
+            <a href="#" class=" ">Porta ac consectetur ac</a>
+            <a href="#" class=" ">Vestibulum at eros</a>
         </div>
+    </div>
+    <div class="text-center">
+        <ul class="list-inline">
+            <li>GitHub:<a href="https://github.com/duious" target="_blank">github.com/duious</a></li>
+        </ul>
     </div>
 </footer>
 </body>
