--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,11 +35,24 @@
     <div class="container">
         <div class="list-group">
             <a class="h5">常用工具网站：</a>
-            <a href="#" class=" ">Cras justo odio</a>
-            <a href="#" class=" ">Dapibus ac facilisis in</a>
-            <a href="#" class=" ">Morbi leo risus</a>
-            <a href="#" class=" ">Porta ac consectetur ac</a>
-            <a href="#" class=" ">Vestibulum at eros</a>
+            <a href="http://www.bootcss.com/" class=" ">BootStrap</a>
+            <a href="http://echarts.baidu.com" class=" ">Echarts</a>
+            <a href="https://pay.weixin.qq.com" class=" ">WeiXinPay</a>
+            <a href="http://www.apache.org/" class=" ">Apache</a>
+            <a href="http://hadoop.apache.org/" class=" ">Hadoop</a>
+            <a href="http://hbase.apache.org/" class=" ">HBase</a>
+            <a href="http://hive.apache.org/" class=" ">Hive</a>
+            <a href="http://jmeter.apache.org/" class=" ">Jmeter</a>
+            <a href="http://kafka.apache.org/" class=" ">Kafka</a>
+            <a href="http://lucene.apache.org/" class=" ">Lucene</a>
+            <a href="http://maven.apache.org/" class=" ">Maven</a>
+            <a href="http://poi.apache.org/" class=" ">Poi</a>
+            <a href="http://tomcat.apache.org/" class=" ">Tomcat</a>
+            <a href="http://zookeeper.apache.org/" class=" ">Zookeeper</a>
+            <a href="https://www.mysql.com/" class=" ">MySql</a>
+            <a href="https://www.oracle.com/" class=" ">Oracle</a>
+            <a href="https://redis.io/" class=" ">Redis</a>
+            <a href="http://blog.mybatis.org/" class=" ">Mybatis</a>
         </div>
     </div>
     <div class="text-center">
